10/13/2003
MySql - Fixed InternalConnection to not use @@session.max_allowed_packet but use @@max_allowed_packet.  (Thanks Miguel)

10/12/2003
MySql - Added many new XML doc lines

10/10/2003
MySql - Fixed sql parsing to not send empty queries (thanks Rory)
MySql - Fixed problem where the reader was not unpeeking the packet on close
MySql - Fixed problem where user variables were not being handled (thanks Sami Vaaraniemi)
MySql - Fixed loop checking in the MySqlPool (thanks Steve M. Brown)

10/7/2003
MySql - Fixed ParameterCollection.Add method to match SqlClient (thanks Joshua Mouch)
Common & MySql - Fixed ConnectionSTring parsing to handle no and yes for boolean and not lowercase values (thanks Naucki)

10/3/2003
MySql - Added InternalConnection class, changes to pooling
Common - Implemented Persist Security Info

9/26/2003
Common - Added security.cs and version.cs to project

9/25/2003
MySql - Fixed DateTime handling in Parameter.cs (thanks Burkhard Perkens-Golomb)
MySql - Fixed parameter serialization where some types would throw a cast exception
MySql - Fixed DataReader to convert all returned values to prevent casting errors (thanks Keith Murray)
MySql - Added code to Command.ExecuteReader to return null if the initial SQL command throws an exception (thanks Burkhard Perkens-Golomb)

9/24/2003
MySql - Fixed ExecuteScalar bug introduced with restructure

9/23/2003
MySql - Restructure to allow for LOCAL DATA INFILE and better sequencing of packets
MySql - Fixed several bugs related to restructure.

9/10/2003
MySql - Early work done to support more secure passwords in Mysql 4.1.  Old passwords in 4.1 not supported yet

8/22/2003
MySql- Parameters appearing after system parameters are now handled correctly (Adam M. (adammil))
MySql - strings can now be assigned directly to blob fields (Adam M.)

8/20/2003
MySql - Fixed float parameters (thanks Pent)

8/7/2003